syntax = "proto3";

package com.zheng.protobuf;

option java_package = "com.zheng.protobuf.rpc.generated";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

// service rpc中的请求和响应要求参数必须是message类型
service StudentService {
    rpc GetRealNameByUsername(MyRequest) returns (MyResponse) {}
    rpc GetStudentsByAge(StudentRequest) returns (stream StudentResponse) {}
    rpc GetStudentWrapperByAges(stream StudentRequest) returns (StudentResponseList) {}
    rpc GetStudentsByAges(stream StudentRequest) returns (stream StudentResponse) {}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 1;
}

message StudentRequest {
    int32 age = 1;
}

message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentResponseList {
    repeated StudentResponse students = 1;
}

